--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,7 @@
         <module>comsumer-demo</module>
         <module>eureka-server</module>
         <module>heima-gateway</module>
+        <module>config-server</module>
     </modules>
     <parent>
         <groupId>org.springframework.boot</groupId>
